refactor Value type at inventory service, add new errors to endpoints at order service
